demo/app-0.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ns0
  labels:
    compliance: open
    env: dev
---
apiVersion: v1
kind: Pod
metadata:
  name: centos
  namespace: ns0
  labels:
    app: centos
    group: app-0
spec:
  containers:
  - name: centos
    image: centos:latest
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
    resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-0
  namespace: ns0
spec:
  selector:
    matchLabels:
      app: app-0
      group: app-0
      svc: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: app-0
        group: app-0
        svc: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app-0-svc
  namespace: ns0
  labels:
    service: app-0-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    svc: nginx
