demo/kube-dns.policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: platform.allow-kube-dns
spec:
  tier: platform
  order: 10
  selector: all()
  egress:
    - action: Allow
      source: {}
      destination:
        selector: k8s-app == "kube-dns"
  types:
    - Egress
